--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,38 +1,42 @@
 <header class="ae-container-fluid ae-container-fluid--full rk-header ">
   <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
-    <input type="checkbox" id="mobile-menu" class="rk-mobile-menu">
-    <label for="mobile-menu">
-      <svg>
-        <use xlink:href="assets/img/symbols.svg#bar"></use>
-      </svg>
-      <svg>
-        <use xlink:href="assets/img/symbols.svg#bar"></use>
-      </svg>
-      <svg>
-        <use xlink:href="assets/img/symbols.svg#bar"></use>
-      </svg>
-    </label>
-    <div class="ae-container-fluid rk-topbar">
-      <h1 class="rk-logo animate_animated animate_backInDown"><a routerLink="">UdeO Portafolio<sup>tm</sup></a></h1>
-      <nav class="rk-navigation">
-        <ul class="rk-menu">
-          <li class=" rk-menu_item"><a routerLink="home" routerLinkActive="active" class="rk-menu_link">Home</a>
-          </li>
-          <li class="rk-menu_item"><a routerLink="about" routerLinkActive="active" class="rk-menu_link">Acerca de</a>
-          </li>
-        </ul>
-        <form class="rk-search">
-          <input type="text" placeholder="Search" id="urku-search" class="rk-search-field">
-          <label for="urku-search">
-            <svg>
-              <use xlink:href="assets/img/symbols.svg#icon-search"></use>
-            </svg>
-          </label>
-        </form>
-      </nav>
-    </div>
-  </header>
-  
+      <input type="checkbox" id="mobile-menu" class="rk-mobile-menu">
+      <label for="mobile-menu">
+        <svg>
+          <use xlink:href="assets/img/symbols.svg#bar"></use>
+        </svg>
+        <svg>
+          <use xlink:href="assets/img/symbols.svg#bar"></use>
+        </svg>
+        <svg>
+          <use xlink:href="assets/img/symbols.svg#bar"></use>
+        </svg>
+      </label>
+      <div class="ae-container-fluid rk-topbar">
+        <h1 class="rk-logo animate_animated animate_backInDown"><a routerLink="">UdeO Portafolio<sup>tm</sup></a></h1>
+        <nav class="rk-navigation">
+          <ul class="rk-menu">
+            <li class="rk-menu_item animateanimated animatebackInDown"><a routerLink="home" routerLinkActive="active" class="rk-menu_link">Home</a>
+            </li>
+            <li class="rk-menu_item animateanimated animatebackInDown"><a routerLink="productos" routerLinkActive="active" class="rk-menu_link">Productos</a>
+            </li>
+         
+            
+            <li class="rk-menu_item animateanimated animatebackInDown"><a routerLink="about" routerLinkActive="active" class="rk-menu_link">Acerca de</a>
+            </li>
+
+          </ul>
+          <form class="rk-search">
+            <input type="text" placeholder="Search" id="urku-search" class="rk-search-field">
+            <label for="urku-search">
+              <svg>
+                <use xlink:href="assets/img/symbols.svg#icon-search"></use>
+              </svg>
+            </label>
+          </form>
+        </nav>
+      </div>
+    </header>
